--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -47,8 +47,9 @@ h1
 ul > li
   :list-style none
 
-.content ul li
-  :list-style disc
+.content, #preview-result
+  ul li
+    :list-style disc
 
 form
   :position relative
@@ -1126,6 +1127,19 @@ label:not(.bootstrapped)
   #publisher_textarea_wrapper
     #hide_publisher
       :display none
+
+#preview-result
+  :display none
+  :border 1px solid #666666
+  :background white
+  :color #000000
+  :clear both
+  :padding 1em
+  :overflow auto
+  :margin 0px
+
+#preview-edit
+  :display none
 
 .dim
   @include opacity(0.3)
