--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -410,7 +410,7 @@ ul.as-selections
     :text
       :decoration none
 
-.stream_element
+.stream_element, #preview-result
   :position relative
   :word-wrap break-word
   :color #555
@@ -1134,9 +1134,14 @@ label:not(.bootstrapped)
   :background white
   :color #000000
   :clear both
-  :padding 1em
+  :padding 0px
   :overflow auto
   :margin 0px
+
+  @include border-radius(2px)
+
+  .content
+    :padding 1em
 
 #preview-edit
   :display none
