--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -9,9 +9,9 @@
 
   %ul.comments{:class => ('loaded' if post.comments.size <= 3)}
     -if post.comments.size > 3 && !comments_expanded && ! all_comments?
-      = render :partial => 'comments/comment', :collection => post.comments.including_author.last(3), :locals => {:post => post}
+      = render :partial => 'comments/comment', :collection => post.comments.including_author.excluding_ignored(current_user).last(3), :locals => {:post => post}
     -else
-      = render :partial => 'comments/comment', :collection => post.comments.including_author, :locals => {:post => post}
+      = render :partial => 'comments/comment', :collection => post.comments.including_author.excluding_ignored(current_user), :locals => {:post => post}
 
   - unless commenting_disabled?(post)
     .new_comment_form_wrapper{:class => comment_form_wrapper_class(post)}
