--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -5,7 +5,7 @@
   - unless comments_expanded || all_comments?
     %ul.show_comments{:class => ("hidden" if post.comments_unignored(current_user).size <= 3)}
       %li
-        = comment_toggle( post)
+        = comment_toggle( post, current_user )
 
   %ul.comments{:class => ('loaded' if post.comments_unignored(current_user).size <= 3)}
     -if post.comments_unignored(current_user).size > 3 && !comments_expanded && ! all_comments?
