Added privacy page.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3489,3 +3489,12 @@ a.toggle_selector
 
       &:hover
         @include opacity(1)
+
+#privacy-info
+  td
+    :vertical-align top
+
+    ul
+      :padding-left 14px
+    li
+      :list-style-type disc
