--- a/app/views/home/privacy_info.html
+++ b/app/views/home/privacy_info.html
@@ -66,7 +66,7 @@ or become your own pod admin.
     <ul>
       <li>the recipient</li>
       <li>your pod admin</li>
-      <li>the admins of the pods of the recipient</li>
+      <li>the admin of the pod of the recipient</li>
     </ul>
   </td>
 </tr>
