Describe privacy of contact list.

--- a/app/views/home/privacy_info.html
+++ b/app/views/home/privacy_info.html
@@ -70,6 +70,15 @@ or become your own pod admin.
     </ul>
   </td>
 </tr>
+<tr>
+  <td>Your contact list</td>
+  <td>
+    <ul>
+      <li>your pod admin</li>
+      <li>your contacts</li>
+    </ul>
+  </td>
+</tr>
 
 </tbody>
 
