Can now add tag exclusions (filters).

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3489,3 +3489,11 @@ a.toggle_selector
 
       &:hover
         @include opacity(1)
+
+#tag_exclusion_name
+  :width 150px
+  :display inline
+  :margin-right 5px
+
+#tag_exclusion_submit
+  :margin-bottom 15px
