--- a/app/views/users/filters.html.haml
+++ b/app/views/users/filters.html.haml
@@ -10,6 +10,12 @@
   %h3
     = t('.tag_exclusions')
 
+  = form_for 'tag_exclusion', :url => tag_exclusions_path, :html => { :method => :post } do |f|
+    = f.error_messages
+    %p
+      = f.text_field 'name'
+      = f.submit t('.add'), :class => "button"
+
   - @tag_exclusions.each do |tx|
     = link_to "##{tx.tag.name}", tag_path(:name => tx.tag.name)
     \-
