--- a/app/views/shared/_contact_sidebar.html.haml
+++ b/app/views/shared/_contact_sidebar.html.haml
@@ -13,4 +13,9 @@
         = link_to t('contacts.spotlight.community_spotlight'), community_spotlight_path, :class => "element_selector"
     %li{:class => ("active" if @finder)}
       = link_to "Facebook Friends", friend_finder_path('facebook'), :class => "element_selector"
-
+    %li
+      = form_tag contacts_import_url, :multipart => true do
+        %span
+          Import contact list
+        = file_field_tag 'file', :accept => 'text/xml'
+        = submit_tag 'Upload'
