Try _path instead of _url so we get https in the form target.

--- a/app/views/shared/_contact_sidebar.html.haml
+++ b/app/views/shared/_contact_sidebar.html.haml
@@ -16,7 +16,7 @@
 
   %hr
 
-    = form_tag contacts_import_url, :multipart => true do
+    = form_tag contacts_import_path, :multipart => true do
       %h4
         Import contact list
       = file_field_tag 'file', :accept => 'text/xml'
