--- a/app/views/home/privacy_info.html
+++ b/app/views/home/privacy_info.html
@@ -1,3 +1,5 @@
+<a href="#francais">(Français)</a>
+
 <h2>Privacy Policy</h2>
 
 <p>There is no Privacy Policy for diasp0ra.ca.</p>
@@ -76,6 +78,97 @@ or become your own pod admin.
     <ul>
       <li>your pod admin</li>
       <li>your contacts</li>
+    </ul>
+  </td>
+</tr>
+
+</tbody>
+
+</table>
+
+
+<hr id="francais"/>
+
+
+<h2>La politique de vie privé</h2>
+
+<p>Il n'y a pas de politique de vie privé pour diasp0ra.ca.</p>
+
+<p>Vous ne devez pas faire confiance aux politiques de vie privée. Les
+compagnies peuvent renier les obligations de n'importe laquelle de leurs
+politiques sans être prises en défaut, sans conséquence ou perte pour elles.</p>
+
+
+<h2>Quelques mots au sujet de la vie privée dans Diaspora</h2>
+
+<p>(Un <i>pod</i> est un serveur sur Diaspora.) Si vous n'avez pas confiance
+que les administrateurs de votre Pod prennent vos intérêts à cœur (ou si vous
+n'avez pas confiance qu'il/elle ne va pas utiliser vos informations d'une
+manière responsable) vous pouvez trouver un administrateur de Pod en lequel
+vous avez confiance ou vous pouvez devenir votre propre administrateur de Pod.</p>
+
+
+<table id="privacy-info">
+
+<thead><tr>
+<th>Les informations fournies</th>
+<th>Peuvent être vues, redistribuées, ou utilisées autrement par</th>
+</tr></thead>
+
+<tbody>
+
+<tr>
+  <td>Votre nom</td>
+  <td><ul><li>Tout les utilisateurs d'Internet</li></ul></td>
+</tr>
+<tr>
+  <td>Votre photo de profile courante</td>
+  <td><ul><li>Tout les utilisateurs d'Internet</li></ul></td>
+</tr>
+<tr>
+  <td>Votre numéro d'identité Diaspora</td>
+  <td><ul><li>Tout les utilisateurs d'Internet</li></ul></td>
+</tr>
+<tr>
+  <td>Vos messages publiques</td>
+  <td><ul><li>Tout les utilisateurs d'Internet</li></ul></td>
+</tr>
+<tr>
+  <td>Votre profil</td>
+  <td>
+    <ul>
+      <li>Vos contacts</li>
+      <li>Votre administrateur</li>
+      <li>L'administrateur de vos contacts</li>
+    </ul>
+  </td>
+</tr>
+<tr>
+  <td>Vos messages limités</td>
+  <td>
+    <ul>
+      <li>Les récipients</li>
+      <li>Votre administrateur</li>
+      <li>L'administrateur des récipients</li>
+    </ul>
+  </td>
+</tr>
+<tr>
+  <td>Vos messages privés</td>
+  <td>
+    <ul>
+      <li>Le récipient</li>
+      <li>Votre administrateur</li>
+      <li>L'administrateur du récipient</li>
+    </ul>
+  </td>
+</tr>
+<tr>
+  <td>Vos contacts</td>
+  <td>
+    <ul>
+      <li>Votre administrateur</li>
+      <li>Vos contacts</li>
     </ul>
   </td>
 </tr>
