French translation of splash page.  Thank you to Dannick Pomerleau and Caroline Laplante for the translations.

--- a/app/views/home/_show.html.erb
+++ b/app/views/home/_show.html.erb
@@ -3,7 +3,7 @@
 <h3>Welcome to Diaspora Canada</h3>
 
 <p>
-<a href="/users/sign_up">Sign Up</a> for a new account</a> or
+<a href="/users/sign_up">Sign Up</a> for a new account or
 <a href="/users/sign_in">Log In</a>
 </p>
 
@@ -12,5 +12,23 @@ If you're curious (or skeptical), you can learn
 <a href="http://www.whatisdiaspora.com/" target="external">about Diaspora</a>
 first.
 </p>
+
+
+<hr/>
+
+
+<h3>Bienvenue sur Diaspora Canada</h3>
+
+<p>
+<a href="/users/sign_up">Enregistrez-vous</a> ou
+<a href="/users/sign_in">connectez-vous</a>
+</p>
+
+<p>
+Si vous êtes curieux (ou sceptique), vous pouvez apprendre
+<a href="http://www.whatisdiaspora.com/" target="external">à propos Diaspora</a>
+premier.
+</p>
+
 
 </center>
