--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3127,6 +3127,8 @@ a.toggle_selector
   .notification_element
     :padding 10px
     :min-height 30px
+    &:hover
+      :background-color #FAFAFA
 
     > img
       :height 30px
