Restrict "mark unread" hotspot to just a link on notifications.  Clicking anywhere else always marks as read.
This is to preserve the behaviour of marking as read when clicking through to a post, comment, etc.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3144,6 +3144,11 @@ a.toggle_selector
       :font
         :weight bold
 
+    .unread-setter
+      :float right
+      :display none
+      :cursor pointer
+
 #notification_badge.active
   :z-index 10
   :background
