Extend unread button feature to Notifications page, too.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -2237,6 +2237,11 @@ h3,h4
     &:hover
       :background-color #EFEFEF
 
+  .unread-setter
+    :float right
+    :display none
+    :cursor pointer
+
 .day_group
   :min-height 100px
   :margin
