--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -30,5 +30,7 @@
                 = notification_message_for(note)
               %br
               %time= timeago(note.created_at)
+              %a{:class => 'unread-setter'}
+                mark unread
         .span-13.last
     = will_paginate notifications
