fix up css for new previews

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -593,6 +593,7 @@ ul.as-selections
     :align right
 
 ul.comments,
+ul.preview_comments,
 ul.show_comments,
 .likes_container,
 .stream_element .reshare
@@ -676,6 +677,9 @@ ul.show_comments
   :margin
     :top 6px
 
+.comment_form_indent
+  :left 35px
+
 form.new_comment
   :padding 8px 5px
   .avatar
@@ -687,6 +691,9 @@ form.new_comment
   :min-height 35px
 
   input
+    :display none
+
+  .comment-preview
     :display none
 
   :margin
@@ -715,7 +722,6 @@ form.new_comment
       :bottom 0
       :top -10px
     :position relative
-    :left 35px
 
   &.open
     .submit_button
@@ -726,6 +732,8 @@ form.new_comment
         :right 2px
 
     input
+      :display inline-block
+    #comm-preview
       :display inline-block
 
 
