use translated strings and tweak css

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -680,6 +680,15 @@ ul.show_comments
 .comment_form_indent
   :left 35px
 
+#comment_preview
+  :display none
+  ul
+    :border 1px solid red
+  p.warningText
+    :color red
+    :margin
+      :bottom 3px
+
 form.new_comment
   :padding 8px 5px
   .avatar
