fix preview button width problem

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -696,6 +696,8 @@ form.new_comment
     :display inline
     :width 30px
     :height 30px
+  #comm-preview
+    :min-width 40px
 
   :min-height 35px
 
