French translation correction from Laurent Fortin.

--- a/app/views/home/_show.html.erb
+++ b/app/views/home/_show.html.erb
@@ -25,9 +25,9 @@ first.
 </p>
 
 <p>
-Si vous êtes curieux (ou sceptique), vous pouvez apprendre
-<a href="http://www.whatisdiaspora.com/" target="external">à propos Diaspora</a>
-premier.
+Si vous êtes curieux (ou sceptique), vous pouvez en apprendre
+<a href="http://www.whatisdiaspora.com/" target="external">à propos de Diaspora</a>
+en premier.
 </p>
 
 
