More restrictive CSS for the comment preview border, so it doesn't affect normal lists in the comment body.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -682,7 +682,7 @@ ul.show_comments
 
 #comment_preview
   :display none
-  ul
+  ul.preview_comments
     :border 1px solid red
   p.warningText
     :color red
