--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3493,3 +3493,8 @@ a.toggle_selector
 .new_group
   :width 400px
   :margin-bottom 20px
+
+#group_info
+  .description
+    :margin-top 1em
+    :margin-bottom 1em
