Buttons to edit a group and cancel editing.

--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -14,3 +14,4 @@
     = f.text_area :description, :rows => 8
   %p
     = f.submit t('.submit')
+    = link_to t('.cancel'), group_path(@group), :class => 'button'
