--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -26,8 +26,9 @@
   %p
     = submit_tag t('.add_new_members')
 
-%ul#group_members
+%table#group_members
   - @group.members.each do |m|
-    %li
-      = m.name
-      = link_to t('.remove'), group_member_url(@group, m), :method => :delete
+    %tr
+      %td= m.name
+      %td= m.diaspora_handle
+      %td= link_to t('.remove'), group_member_url(@group, m), :method => :delete
