People can now join groups themselves (without admin).  Admin gating forthcoming.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3499,7 +3499,7 @@ a.toggle_selector
     :margin-top 1em
     :margin-bottom 1em
 
-#edit_group
+#group_buttons
   :float right
 
 #group_members
