--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -9,9 +9,12 @@
       %span.group_identifier
         = @group.identifier_full
 
-      - if current_user.admin_of?(@group)
-        #edit_group
+      #group_buttons
+        - if current_user.admin_of?(@group)
           = link_to t('.edit_group'), edit_group_path(@group), :class => 'button'
+
+        - if ! current_user.member_of?(@group)
+          = link_to t('.join_group'), group_join_url(@group), :class => 'button', :method => 'POST'
 
       .description
         = markdownify(@group.description)
