Beautification of group edit page.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3490,7 +3490,7 @@ a.toggle_selector
       &:hover
         @include opacity(1)
 
-.new_group, .edit_group
+.new_group, .edit_group, .add_group_members
   :width 400px
   :margin-bottom 20px
 
