--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -16,16 +16,17 @@
     = f.submit t('.submit')
     = link_to t('.cancel'), group_path(@group), :class => 'button'
 
-%h2= t('.members')
+%hr
 
-= form_tag group_members_url(@group) do
-  %h4= t('.new_members')
+%h4= t('.new_members')
+= form_tag group_members_url(@group), :class => 'add_group_members' do
   %p
     = label_tag 'group_members[handles]', t('.new_members_label')
     = text_field 'group_members', 'handles'
   %p
     = submit_tag t('.add_new_members')
 
+%h4= t('.current_members')
 %table#group_members
   - @group.members.each do |m|
     %tr
