--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3505,3 +3505,12 @@ a.toggle_selector
 #group_members
   :margin-top 1em
   :width auto
+
+#pending_members
+  :border 2px solid red
+  :margin-top 1em
+  :margin-bottom 1em
+  :padding 1em
+  table
+    :width auto
+
