--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3502,6 +3502,16 @@ a.toggle_selector
 #group_buttons
   :float right
 
+#group_admission
+  :margin-bottom 1em
+  input
+    :width auto
+    :display inline
+    :top 0px
+    :margin-left 0px
+  span
+    :margin-right 1em
+
 #group_members
   :margin-top 1em
   :width auto
