--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -10,6 +10,14 @@
   %p
     = f.label :description, t('.description')
     = f.text_area :description, :rows => 8
+  #group_admission
+    %span= t('.admission.label')
+    = f.radio_button :admission, 'open'
+    %span= t('.admission.open')
+    = f.radio_button :admission, 'on-approval'
+    %span= t('.admission.on_approval')
+    = f.radio_button :admission, 'manual'
+    %span= t('.admission.manual')
   %p
     = f.submit t('.submit')
 
