--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -9,19 +9,20 @@
       %span.group_identifier
         = @group.identifier_full
 
-      #group_buttons
-        - if current_user.admin_of?(@group)
-          = link_to t('.edit_group'), edit_group_path(@group), :class => 'button'
+      - if current_user
+        #group_buttons
+          - if current_user.admin_of?(@group)
+            = link_to t('.edit_group'), edit_group_path(@group), :class => 'button'
 
-        - if ! current_user.member_of?(@group)
-          - if @group.has_membership_request_from?(current_user)
-            = t('.pending')
-            = link_to t('.join_group'), '#', :class => 'button disabled'
-          - elsif @group.admission == 'open' || @group.admission == 'on-approval'
-            = link_to t('.join_group'), group_join_path(@group), :class => 'button', :method => 'POST'
-          - elsif @group.admission == 'manual'
-            = t('.private_membership')
-            = link_to t('.join_group'), '#', :class => 'button disabled'
+          - if ! current_user.member_of?(@group)
+            - if @group.has_membership_request_from?(current_user)
+              = t('.pending')
+              = link_to t('.join_group'), '#', :class => 'button disabled'
+            - elsif @group.admission == 'open' || @group.admission == 'on-approval'
+              = link_to t('.join_group'), group_join_path(@group), :class => 'button', :method => 'POST'
+            - elsif @group.admission == 'manual'
+              = t('.private_membership')
+              = link_to t('.join_group'), '#', :class => 'button disabled'
 
       .description
         = markdownify(@group.description)
