Added group posts to main stream page.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3403,6 +3403,12 @@ a.toggle_selector
 .mentioned_stream
   .indicator
     :background-color #E3E856
+.groups_stream
+  .indicator
+    :background-color #DE7B3D
+.groups_stream.aspects_stream
+  .indicator
+    :background-color $green
 
 .center
   :text-align center
