--- a/app/views/groups/_group_sidebar.html.haml
+++ b/app/views/groups/_group_sidebar.html.haml
@@ -1,5 +1,5 @@
 #group_sidebar
-  .group_photo
+  .group_photo#group_photo_drop
     %img{:src => '/images/user/default.png', :width => '100'}
 
   #group_members
