Another link on posts that allows showing of just 6 more comments instead of all of them at once.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -674,6 +674,12 @@ ul.show_comments
     :bottom 6px
   :margin
     :top 6px
+  .show_more_comments
+    :margin-right 20px
+
+ul.comments
+  .num_left
+    :display none
 
 form.new_comment
   :padding 8px 5px
