--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -5,7 +5,9 @@
   - unless comments_expanded || all_comments?
     %ul.show_comments{:class => ("hidden" if post.comments.size <= 3)}
       %li
-        = comment_toggle( post)
+        - if post.comments.size > 3+6
+          = link_next_comments(post)
+        = comment_toggle(post)
 
   %ul.comments{:class => ('loaded' if post.comments.size <= 3)}
     -if post.comments.size > 3 && !comments_expanded && ! all_comments?
