--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -18,7 +18,8 @@
           - if current_user.admin_of?(@group)
             = link_to t('.edit_group'), edit_group_path(@group), :class => 'button'
 
-          = link_to t('.private_message'), new_conversation_path('group_id' => @group.id), :class => 'button', :rel => 'facebox'
+          - if current_user.member_of?(@group)
+            = link_to t('.private_message'), new_conversation_path('group_id' => @group.id), :class => 'button', :rel => 'facebox'
 
           - if ! current_user.member_of?(@group)
             - if @group.has_membership_request_from?(current_user)
