--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -3522,6 +3522,13 @@ a.toggle_selector
   :margin-top 1em
   :width auto
 
+.group-avatar-listed
+  :height 24px
+  :width 24px
+
+table.groups
+  :width auto
+
 #pending_members
   :border 2px solid red
   :margin-top 1em
