--- a/app/views/groups/_group_sidebar.html.haml
+++ b/app/views/groups/_group_sidebar.html.haml
@@ -1,5 +1,6 @@
 #group_sidebar
-  = render :partial => 'photos/new_group_photo', :locals => { :group => group }
+.group_photo#group_photo_drop
+  = image_tag( good_image_for_group( group ), :id => 'group_photo_img', :width=>'100' )
 
   #group_members
     %h3 Members
