--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,5 +1,8 @@
 %h2= t('.editing_group', :name => @group.name)
 
+%p
+  = render :partial => 'photos/new_group_photo', :locals => { :group => @group }
+
 = form_for @group, :url => { :action => 'update' }, :method => 'put' do |f|
   %p
     %h4= t('.identifier')
