--- a/app/views/photos/_new_group_photo.haml
+++ b/app/views/photos/_new_group_photo.haml
@@ -7,7 +7,7 @@
     function createGroupUploader(){
       var uploader = new qq.FileUploaderBasic({
         element: document.getElementById('group-photo'),
-        params: {'photo' : {'pending' : true, 'aspect_ids' : "all", 'group_photo_id': 1}},
+        params: {'photo' : {'pending' : true, 'aspect_ids' : "all", 'group_photo_id': #{group.id}}},
         allowedExtensions: ['jpg', 'jpeg', 'png'],
         action: "/photos",
         button: document.getElementById('group-photo'),
