--- a/app/views/aspects/_aspect_stream.haml
+++ b/app/views/aspects/_aspect_stream.haml
@@ -20,7 +20,7 @@
 
 #main_stream.stream{:data => {:guids => stream.aspect_ids.join(','), :time_for_scroll => time_for_scroll(stream.ajax_stream?, stream)}}
   - if !stream.ajax_stream? && stream.stream_posts.length > 0
-    = render 'shared/stream', :posts => stream.stream_posts
+    = render 'shared/stream', :posts => stream.stream_posts[ 0...(AppConfig['stream_pagination_size'] || 10) ]
   #pagination
     =link_to(t('more'), next_page_path(:ajax_stream => stream.ajax_stream?), :class => 'paginate')
 
