Use Post#hint and strip_tags, so the markup doesn't get all mangled up with found posts that have markup.

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
 <% @posts.each do |p| %>
-  <li><a href="<%= post_path(p) %>"><%= t('ago', :time => time_ago_in_words(p.created_at)) %></a> - <%= p.text[0...80] %></li>
+  <li><a href="<%= post_path(p) %>"><%= t('ago', :time => time_ago_in_words(p.created_at)) %></a> - <%= p.hint %></li>
 <% end %>
 </ul>
 
@@ -10,6 +10,6 @@
 
 <ul>
 <% @comments.each do |c| %>
-  <li><a href="<%= post_path(c.post) %>"><%= t('ago', :time => time_ago_in_words(c.created_at)) %></a> - <%= c.text[0...80] %></li>
+  <li><a href="<%= post_path(c.post) %>"><%= t('ago', :time => time_ago_in_words(c.created_at)) %></a> - <%= strip_tags(c.text)[0...80] %></li>
 <% end %>
 </ul>
