Show only unread notifications in the notifications dropdown.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -45,7 +45,7 @@
           \|
           = link_to t('.view_all'), notifications_path, :id => "view_all_notifications"
         %h4
-          = t('.recent_notifications')
+          = t('.unread_notifications')
       .notifications
         .ajax_loader
           = image_tag("ajax-loader.gif")
