--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -58,14 +58,12 @@
 
     #chat_dropdown
       .incoming
-        - @chat_partners.each_with_index do |author,i|
-          %span.partner{'data-person_id' => author.id, 'class' => ('active' if i == 0)}
-            = person_image_tag(author)
-        - @chat_partners.each_with_index do |author,i|
-          .conversation{'data-person_id' => author.id, 'class' => ('active' if i == 0)}
-            %h4.with= @chat_messages_unread[author][0].author.name
-            - @chat_messages_unread[author].each do |message|
-              = render :partial => 'chat_messages/chat_message', :locals => { :message => message }
+        .partners
+          - @chat_partners.each_with_index do |partner,i|
+            = render :partial => 'chat_messages/partner', :locals => { :partner => partner, :first => i == 0 }
+        .conversations
+          - @chat_partners.each_with_index do |partner,i|
+            = render :partial => 'chat_messages/conversation', :locals => { :partner => partner, :messages => @chat_messages_unread[partner], :first => i == 0 }
       .outgoing
         = text_area_tag 'chat-text', '', :rows => 3, :id => 'chat-text'
 
