--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -62,7 +62,7 @@
           - @chat_partners.each_with_index do |partner,i|
             = render :partial => 'chat_messages/partner', :locals => { :partner => partner, :first => i == 0 }
         %h4.partner-current
-          = @chat_partners[0].name
+          = @chat_partners.any? ? @chat_partners[0].name : ''
         .conversations
           - @chat_partners.each_with_index do |partner,i|
             = render :partial => 'chat_messages/conversation', :locals => { :partner => partner, :messages => @chat_messages_read[partner] + @chat_messages_unread[partner], :first => i == 0 }
