Chat statuses ("away", etc.)  Merely visual at this point.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -57,15 +57,20 @@
           = image_tag("ajax-loader.gif")
 
     #chat_dropdown
+      .chat_status
+        = t('.status')
+        %br
+        = select_tag( 'chat_status',  options_for_select( ['online', 'away', 'dnd', 'offline',].map { |s| [ t("chat.status.#{s}"), s, ] }, current_user.chat_status ) )
       .incoming
         .partners
           - @chat_partners.each_with_index do |partner,i|
-            = render :partial => 'chat_messages/partner', :locals => { :partner => partner, :num_unread => @chat_messages_unread[partner].size, :first => i == 0 }
+            = render :partial => 'chat_messages/partner', :locals => { :partner => partner, :num_unread => @chat_messages_unread[partner].size, :first => i == 0, :contact_status => @chat_statuses[partner] }
         %h4.partner-current
-          = @chat_partners.any? ? @chat_partners[0].name : ''
+          - if @chat_partners.any?
+            = @chat_partners[0].name + ' (' + @chat_statuses[0] + ')'
         .conversations
           - @chat_partners.each_with_index do |partner,i|
-            = render :partial => 'chat_messages/conversation', :locals => { :partner => partner, :messages => @chat_messages_read[partner] + @chat_messages_unread[partner], :first => i == 0 }
+            = render :partial => 'chat_messages/conversation', :locals => { :partner => partner, :messages => @chat_messages_read[partner] + @chat_messages_unread[partner], :first => i == 0, }
       .outgoing
         = text_area_tag 'chat-text', '', :rows => 3, :id => 'chat-text'
 
