--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -41,7 +41,7 @@
       #chat_badge.badge
         = link_to chat_messages_path do
           = image_tag 'icons/speechbubble.png'
-          .badge_count{:class => ("hidden" if @chat_messages_unread.size == 0)}
+          .badge_count{:class => ("hidden" if @chat_messages_unread.size == 0 || ! current_user.receiving_chat? )}
             = @chat_messages_unread.size
 
     #notification_dropdown
