--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -98,8 +98,8 @@
     #chat_badge.badge
       = link_to chat_messages_path do
         = image_tag 'icons/speechbubble.png'
-        .badge_count{:class => ("hidden" if @chat_messages_unread.size == 0 || ! current_user.receiving_chat? )}
-          = @chat_messages_unread.size
+        .badge_count{:class => ("hidden" if @chat_messages_unread.values.flatten.size == 0 || ! current_user.receiving_chat? )}
+          = @chat_messages_unread.values.flatten.size
 
   #lightbox
     #lightbox-content
