Fix mistaken Offline status for online contacts.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -61,7 +61,9 @@
             = render :partial => 'chat_messages/partner', :locals => { :partner => partner, :num_unread => @chat_messages_unread[partner].size, :first => i == 0, :contact_status => @chat_statuses[partner] }
         %h4.partner-current
           - if @chat_partners.any?
-            = @chat_partners[0].name + ' (' + @chat_statuses[0] + ')'
+            = @chat_partners[0].name
+            - if @chat_statuses[0]
+              = ' (' + @chat_statuses[0] + ')'
         .conversations
           - @chat_partners.each_with_index do |partner,i|
             = render :partial => 'chat_messages/conversation', :locals => { :partner => partner, :messages => @chat_messages_read[partner] + @chat_messages_unread[partner], :first => i == 0, }
