Adjust pod-only tooltip text.

--- a/app/views/shared/_stream_element.html.haml
+++ b/app/views/shared/_stream_element.html.haml
@@ -59,7 +59,7 @@
             = t('public')
             &ndash;
         - elsif post.pod_only?
-          %span.post_scope{:title => t('.viewable_pod_only')}
+          %span.post_scope{:title => t('.viewable_pod_only', :pod => AppConfig[:pod_uri].host)}
             = t('pod_only')
             &ndash;
         - else
