Stop misrendering hovercards, regardless of name or handle length.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -77,15 +77,19 @@
 
     #hovercard_container
       #hovercard
-        %img.avatar
-        %h4
-          %a.person
-        %p.handle
-        #hovercard_dropdown_container
-
-        .hovercard_footer
-          .footer_container
-            .hashtags
+        %table
+          %tr
+            %td
+              %img.avatar
+            %td
+              %h4
+                %a.person
+              %p.handle
+              #hovercard_dropdown_container
+          %tr
+            .hovercard_footer
+              .footer_container
+                .hashtags
 
     %ul#user_menu.dropdown
       %li
