--- a/public/stylesheets/sass/hovercard.scss
+++ b/public/stylesheets/sass/hovercard.scss
@@ -26,6 +26,9 @@
     bottom: 25px;
   };
 
+  td {
+    padding: 0px;
+  }
 
   h4 {
     margin-bottom: 0px;
@@ -82,7 +85,6 @@
   z-index: 10;
 
   min-width: 250px;
-  max-width: 400px;
 
   padding: 10px {
     top: 5px;
