Podmates stay orange, even on hover.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -21,6 +21,8 @@ a
     :color $blue
     :text
       :decoration underline
+.podmate
+  :color $orange
 
 p
   :word-wrap break-word
@@ -514,6 +516,8 @@ ul.as-selections
     .from
       a
         :color $blue
+      a.podmate
+        :color $orange
 
 .status_message_show
   .stream_element
